2007-01-02  Thomas Moschny <thomas.moschny@gmx.de>

	* std_hooks.lua (get_netsync_connect_command): Fix a typo.

2006-12-31  Matthew Gregan  <kinetik@orcon.net.nz>

	* Makefile.am (AM_CFLAGS, AM_CXXFLAGS): Add
	BOOST_MULTI_INDEX_DISABLE_SERIALIZATION define to avoid pulling in
	serialization support that we don't need.

2006-12-31  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-mirror-postaction-update.sh (database):
	Make it possible to checkout into an empty directory.  Add a
	bit more logging.

2006-12-28  Derek Scherger  <derek@echologic.com>

	* tests/update_clobbers_workspace/__driver__.lua: new test to
	see how update handles various workspace conflicts
	* testsuite.lua: call it

2006-12-28  Richard Levitte  <richard@levitte.org>

	* examples/mirror.rc: An incomplete example specification for
	contrib/monotone-mirror.pl.

2006-12-28  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-mirror.sh: Mirroring script.
	* contrib/monotone-mirror-postaction-update.sh: Postaction script
	that goes with contrib/monotone-mirror.sh.
	* contrib/README: Describe them.

2006-12-28  Matthew Nicholson  <matt@matt-land.com>

	* contrib/monotone.bash_completion: Renamed regenerate_rosters to
	regenerate_caches.

2006-12-28  Derek Scherger  <derek@echologic.com>

	* tests/checkout_clobbers_workspace/__driver__.lua: new test to
	see how checkout handles various workspace conflicts
	* testsuite.lua: call it
	
2006-12-28  Derek Scherger  <derek@echologic.com>

	* tests/missing_empty_dir/__driver__.lua: new test for missing,
	empty, versioned directories 
	* testsuite.lua: call it
	* work.cc (update_current_roster_from_filesystem): abort if there
	are missing directories, whether they contained files or
	not. tweak the associated messages so they're a bit more specific
	about missing things verses things that are not what they should
	be, like files that should be directories and vice-versa.
	
2006-12-27  Richard Levitte  <richard@levitte.org>
